fix wrong padding

--- a/css/styles.css
+++ b/css/styles.css
@@ -375,7 +375,7 @@ h1,h2,h3,h4,h5,h6,p,ul {
 /* Regular customers */
 
 .customers {
-    padding: 94px 215px;
+    padding: 94px 0px;
 }
 
 .customers .list {
